--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,11 @@ requires = [
 ]
 build-backend = "hatchling.build"
 
-
 [tool.setuptools_scm]
 version_scheme = "post-release"
+
+[tool.hatch.build.hooks.custom]
+path = 'hatch_build.py'
 
 [project]
 name = "panel-splitjs"
