--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
         with:
           environments: default lint
       - name: pre-commit
-        run: pixi run pre-commit-run --color=always --show-diff-on-failure
+        run: pixi run pre-commit-run -e lint --color=always --show-diff-on-failure
 
   pytest:
     timeout-minutes: 30
