--- a/pixi.toml
+++ b/pixi.toml
@@ -73,7 +73,7 @@ _install = "pip install --no-deps --disable-pip-version-check -e ."
 _install-ui = 'playwright install chromium'
 
 [feature.test-ui.tasks.test-ui]
-cmd = 'pytest ./tests/ui --ui --browser chromium -n logical --dist loadgroup --reruns 3 --reruns-delay 10'
+cmd = 'pytest ./tests/ --ui --browser chromium -n logical --dist loadgroup --reruns 3 --reruns-delay 10'
 depends-on = ["_install", "_install-ui"]
 
 # =============================================
