--- a/pixi.toml
+++ b/pixi.toml
@@ -1,6 +1,6 @@
 [project]
 name = "panel-splitjs"
-channels = ["conda-forge", "pyviz/label/dev"]
+channels = ["pyviz/label/dev", "conda-forge"]
 platforms = ["osx-arm64", "osx-64", "linux-64", "win-64"]
 
 [tasks]
@@ -12,7 +12,7 @@ pre-commit-run = "pre-commit run -a"
 
 [dependencies]
 python = ">=3.10"
-panel = ">=1.8.0"
+panel = ">=1.8.3a0"
 bokeh = ">=3.8.0"
 packaging = "*"
 watchfiles = "*"
@@ -73,7 +73,7 @@ _install = "pip install --no-deps --disable-pip-version-check -e ."
 _install-ui = 'playwright install chromium'
 
 [feature.test-ui.tasks.test-ui]
-cmd = 'pytest ./tests/ui --ui --browser chromium -n logical --dist loadgroup --reruns 3 --reruns-delay 10'
+cmd = 'pytest ./tests/ --ui --browser chromium -n logical --dist loadgroup --reruns 3 --reruns-delay 10'
 depends-on = ["_install", "_install-ui"]
 
 # =============================================
