Build against dev version

--- a/pixi.toml
+++ b/pixi.toml
@@ -1,4 +1,4 @@
-[project]
+[workspace]
 name = "panel-splitjs"
 channels = ["pyviz/label/dev", "conda-forge"]
 platforms = ["osx-arm64", "osx-64", "linux-64", "win-64"]
@@ -16,8 +16,6 @@ panel = ">=1.8.3a0"
 bokeh = ">=3.8.0"
 packaging = "*"
 watchfiles = "*"
-
-[host-dependencies]
 pip = "*"
 setuptools = ">=61"
 setuptools-scm = "*"
@@ -69,7 +67,7 @@ playwright = { version = "<1.51", channel = "microsoft" }
 pytest-playwright = { version = "*", channel = "microsoft" }
 
 [feature.test-ui.tasks]
-_install = "pip install --no-deps --disable-pip-version-check -e ."
+_install = "pip install --no-deps --no-build-isolation --disable-pip-version-check -e ."
 _install-ui = 'playwright install chromium'
 
 [feature.test-ui.tasks.test-ui]
